--- a/branches/Sindicato/Sindicato.WebSite/Web.config
+++ b/branches/Sindicato/Sindicato.WebSite/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=192.168.43.52;PASSWORD=Sindicato;PERSIST SECURITY INFO=True;USER ID=SINDICATO_121&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=192.168.43.52;PASSWORD=Sindicato;PERSIST SECURITY INFO=True;USER ID=SINDICATO_121&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost;PASSWORD=Sindicato;PERSIST SECURITY INFO=True;USER ID=SINDICATO_121&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
