--- a/branches/Sindicato/Sindicato.Model/App.Config
+++ b/branches/Sindicato/Sindicato.Model/App.Config
@@ -2,6 +2,6 @@
 <configuration>
   <connectionStrings>
     <!--<add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost;PASSWORD=Sindicato;PERSIST SECURITY INFO=True;USER ID=SINDICATO_121&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost;PASSWORD=Sindicato;PERSIST SECURITY INFO=True;USER ID=SINDICATO_121&quot;" providerName="System.Data.EntityClient" />
+    <add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost;PASSWORD=Sindicato;PERSIST SECURITY INFO=True;USER ID=SD_121&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
