--- a/branches/Sindicato/Sindicato.WebSite/Web.config
+++ b/branches/Sindicato/Sindicato.WebSite/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
-    <add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=192.168.43.57;PASSWORD=Sindicato;PERSIST SECURITY INFO=True;USER ID=SINDICATO_131&quot;" providerName="System.Data.EntityClient" />
+    <add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost;PASSWORD=Sindicato;PERSIST SECURITY INFO=True;USER ID=SINDICATO_131&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
