--- a/branches/Sindicato/Sindicato.Model/Sindicato.Model.csproj
+++ b/branches/Sindicato/Sindicato.Model/Sindicato.Model.csproj
@@ -80,7 +80,9 @@
     <Content Include="DDL\07032014v1.txt" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.Config" />
+    <None Include="App.Config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Modelo.edmx.diagram">
       <DependentUpon>Modelo.edmx</DependentUpon>
     </None>
