--- a/branches/Sindicato/Sindicato.Model/App.Config
+++ b/branches/Sindicato/Sindicato.Model/App.Config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings><add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;data source=192.168.43.57;persist security info=True;user id=SINDICATO_131&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;data source=server131;password=Sindicato;persist security info=True;user id=SINDICATO_131&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
