--- a/branches/Sindicato/Sindicato.Business/Sindicato.Business.csproj
+++ b/branches/Sindicato/Sindicato.Business/Sindicato.Business.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SD_DIAS_NO_TRABAJADOSManager.cs" />
     <Compile Include="SD_VENTA_HOJAS_REFUERZOManager.cs" />
     <Compile Include="SD_HIST_MOVILManager.cs" />
     <Compile Include="SD_DETALLES_HOJAS_USOManager.cs" />
